--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -12,3 +12,9 @@ div.bgcontainer {
 .p-20{
     padding-right: 20px;
 }
+.bg-purple{
+background-color: purple;
+}
+.menu-list{
+    overflow-y: scroll;height: 600px;  
+}
